--- a/ApexReportTool/ApexReportTool/MainWindow.xaml
+++ b/ApexReportTool/ApexReportTool/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ApexReportTool"
         mc:Ignorable="d"
-        Title="Apex Report Tool" MinHeight="320" MinWidth="570" Height="320" Width="570" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Closing="Window_Closing">
+        Title="Apex Report Tool" MinHeight="320" MinWidth="570" Height="320" Width="570" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Closing="Window_Closing" WindowStyle="ToolWindow" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
